Need to fix overflow problem with slideshow and add timer, logo looks good but still can be improved.

--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -51,7 +51,7 @@
 }
 
 .slogan {
-    margin-top: 10px;
+    margin-top: 7px;
 }
 
 h3, ul, li, p{
